# cmake-tutorial

./: README.md
app/: CMakeLists.txt
app/include/: tutorial-config.h
app/src/: tutorial.cpp
